fix(frontend): fix some blue icons on ios #6023 #5993

--- a/frontend/src/component/FeedItem/FeedItemHeader.styl
+++ b/frontend/src/component/FeedItem/FeedItemHeader.styl
@@ -31,6 +31,7 @@
     padding-inline-end standardSpacing
   &__actionMenu
     &.dropdownMenuButton
+      color fontColor
       padding 0 (standardSpacing * 2)
       & i
         width auto
