--- a/frontend_lib/src/component/PopinFixed/PopinFixed.styl
+++ b/frontend_lib/src/component/PopinFixed/PopinFixed.styl
@@ -42,6 +42,7 @@
       margin 0
     &__actions
       &.dropdownMenuButton
+        color fontColor
         padding (standardSpacing / 2)
         margin 0
         & i
@@ -155,6 +156,7 @@
           border none
           height 65px
           background-color lightGrey1
+          color fontColor
           border-inline-start 5px solid transparent
           &:focus
             border-color transparent
